Add tests; handle multiple paths